# ultimo

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOOGLE_SEARCH_CONSOLE.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SEO_ASSETS_SUMMARY.md  deny.toml  release-plz.toml  render.yaml
.cargo/: config.toml
.claude/skills/ship-feature/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: GITHUB_PROJECTS_SETUP.md  INITIAL_ISSUES.md  PROJECT_BOARD.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md  README.md  RELEASE_PROCESS.md  SETUP_COMPLETE.md  VISUAL_WORKFLOW.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  label-pr.yml  project-automation.yml  release-plz.yml  release.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
coverage-tool/: Cargo.toml
coverage-tool/src/: main.rs
docs/: MOONREPO.md  OPTIONAL_FEATURES_TESTING.md  TESTING.md  sessions.md  testing-utilities.md
docs-site/: DEPLOYMENT.md  README.md  moon.yml  package.json  pnpm-lock.yaml  vocs.config.ts
docs-site/docs/pages/: api-keys.mdx  api-reference.mdx  authentication.mdx  authorization.mdx  changelog.mdx  cli.mdx  database.mdx  deployment.mdx  diesel.mdx  getting-started.mdx  index.mdx  jwt.mdx  middleware.mdx  openapi.mdx  performance.mdx  roadmap.mdx  routing.mdx  rpc.mdx  security.mdx  sessions.mdx  sqlx.mdx  static-files.mdx  testing.mdx  typescript.mdx  websocket.mdx
docs-site/docs/public/: _headers  _redirects
docs/superpowers/plans/: 2026-06-03-session-management.md  2026-06-03-testing-utilities.md  2026-06-07-jwt-auth.md  2026-06-07-website-secure-fast.md  2026-06-08-readme-cleanup.md  2026-06-08-static-files-compression.md  (+1 more)
examples/: REACT_EXAMPLES.md  WEBSOCKET_PHASE2.md
examples/basic/: Cargo.toml  Dockerfile
examples/basic/src/: main.rs
examples/benchmark/: BENCHMARK.md  README.md  RESULTS.md  RESULTS_WITH_AXUM.md  RESULTS_WITH_FASTAPI.md  run-benchmarks.sh
examples/benchmark/axum-server/: Cargo.toml  README.md
examples/benchmark/axum-server/src/: main.rs
examples/benchmark/ultimo-server/: Cargo.toml
examples/benchmark/ultimo-server/src/: main.rs
examples/database-api-styles/: Cargo.toml  README.md  index.html
examples/database-api-styles/src/: main.rs
examples/database-api-styles/tests/: integration_tests.rs
examples/database-diesel/: Cargo.toml  README.md
examples/database-diesel/src/: main.rs
examples/database-diesel/tests/: integration_tests.rs
examples/database-sqlx/: Cargo.toml  README.md
examples/database-sqlx/src/: main.rs
examples/database-sqlx/tests/: integration_tests.rs
examples/jwt-auth/: Cargo.toml  Dockerfile
examples/jwt-auth/src/: main.rs
examples/openapi-demo/: Cargo.toml  Dockerfile  README.md  openapi-jsonrpc.json  openapi-manual.json  openapi-rest.json  swagger-ui.html
examples/openapi-demo/src/: main.rs  rest-server.rs  rpc-server.rs  server.rs
examples/react-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/react-app-rest/: README.md  package-lock.json  package.json  pnpm-lock.yaml
examples/react-app-rpc/: README.md  package-lock.json  package.json  vite.config.ts
examples/rpc-modes/: Cargo.toml  README.md  ultimo-client-jsonrpc.ts  ultimo-client-rest.ts
examples/rpc-modes/src/: main.rs
examples/session-auth/: Cargo.toml  Dockerfile
examples/session-auth/src/: main.rs
examples/spa-demo/: Cargo.toml  Dockerfile
examples/spa-demo/src/: main.rs
examples/websocket-chat/: Cargo.toml  Dockerfile  README.md  index.html
examples/websocket-chat-react/: Cargo.toml  README.md  index.html  moon.yml  package-lock.json  package.json  pnpm-lock.yaml
examples/websocket-chat/client/: package-lock.json
examples/websocket-chat/src/: main.rs
examples/websocket-chat/tests/: chat.rs
scripts/: check-versions.sh  coverage.sh  demo.sh  install-cli.sh  install-hooks.sh  release.sh  sync-versions.sh  test-summary.sh
ultimo/: CHANGELOG.md  Cargo.toml  WEBSOCKET_DESIGN.md  WEBSOCKET_TESTING.md
ultimo-cli/: Cargo.toml
ultimo-cli/src/: dev.rs  generate.rs  main.rs  new.rs
ultimo-cli/tests/: cli.rs
ultimo/benches/: http_bench.rs  websocket_bench.rs  websocket_pubsub_bench.rs
ultimo/src/: app.rs  context.rs  cookie.rs  csrf.rs  error.rs  handler.rs  lib.rs  middleware.rs  openapi.rs  response.rs  router.rs  rpc.rs  static_files.rs  validation.rs  websocket.rs
ultimo/src/auth/: api_key.rs  jwt.rs  mod.rs
ultimo/src/database/: diesel.rs  error.rs  mod.rs  sqlx.rs  tests.rs
ultimo/src/openapi/: docs.rs
ultimo/src/session/: config.rs  middleware.rs  mod.rs  store.rs
ultimo/src/testing/: client.rs  database.rs  fixtures.rs  middleware.rs  mod.rs  response.rs
ultimo/src/websocket/: connection.rs  frame.rs  mod.rs  pubsub.rs  upgrade.rs
ultimo/tests/: api_key.rs  authz.rs  body_limit.rs  client_gen.rs  client_ip.rs  compression.rs  cookie.rs  csrf.rs  integration_test.rs  jwt.rs  rate_limit.rs  security_headers.rs  serve_docs.rs  session.rs  static_files.rs  testing_db.rs  testing_utils.rs  websocket_backpressure.rs  websocket_concurrency.rs  websocket_config.rs  websocket_edge_cases.rs  websocket_error_handling.rs  websocket_fragmentation.rs  websocket_integration.rs  websocket_ping_pong.rs  websocket_property.rs  websocket_router_integration.rs  websocket_shutdown.rs
ultimo/tests/fixtures/: user.json
website/: .gitignore  DEPLOYMENT.md  README.md  SEO_SETUP.md  moon.yml  next.config.mjs  package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
website/components/: blog-section.tsx  comparison-section.tsx  cta-section.tsx  features-section.tsx  hero-section.tsx  json-ld.tsx  security-section.tsx  site-footer.tsx  site-header.tsx  stats-section.tsx  table-of-contents.tsx  type-safe-section.tsx  use-cases-section.tsx
website/lib/: blog.ts  config.ts
website/public/: _headers  generate-icons-macos.sh  generate-icons.mjs  generate-icons.sh
(+63 files in other folders)
