[package]
name = "ultimo-coverage"
version = "0.1.0"
edition = "2021"
authors = ["Ultimo Contributors"]
description = "Simple, transparent code coverage tool for Ultimo framework"

[[bin]]
name = "ultimo-coverage"
path = "src/main.rs"

[dependencies]
# Minimal dependencies - only what we absolutely need
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = "0.4"

[dev-dependencies]
# No dev dependencies - keep it simple
