[package]
name = "ultimo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ultimo Contributors"]
license = "MIT"
description = "CLI tool for Ultimo web framework - Generate TypeScript clients, scaffold projects, and more"
homepage = "https://github.com/yourusername/ultimo-rs"
repository = "https://github.com/yourusername/ultimo-rs"
keywords = ["cli", "codegen", "typescript", "web", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ultimo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
