[package]
name = "ultimo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
multer = { workspace = true }
ts-rs = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

# WebSocket support (zero additional dependencies - built on hyper)
uuid = { version = "1.0", features = ["v4"] }
sha1 = "0.10"
base64 = "0.21"
async-trait = "0.1"

# Database support (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"], optional = true }
diesel = { version = "2.1", optional = true }
r2d2 = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }

[features]
default = []

# WebSocket feature (zero additional dependencies)
websocket = []

# Database features
database = []
sqlx-postgres = ["database", "sqlx", "sqlx/postgres"]
sqlx-mysql = ["database", "sqlx", "sqlx/mysql"]
sqlx-sqlite = ["database", "sqlx", "sqlx/sqlite"]
diesel-postgres = ["database", "diesel", "diesel/postgres", "diesel/r2d2", "r2d2"]
diesel-mysql = ["database", "diesel", "diesel/mysql", "diesel/r2d2", "r2d2"]
diesel-sqlite = ["database", "diesel", "diesel/sqlite", "diesel/r2d2", "r2d2"]
