[package]
name = "ultimo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
multer = { workspace = true }
ts-rs = { workspace = true, optional = true }
tracing = { workspace = true }
bytes = { workspace = true }

# WebSocket support (zero additional dependencies - built on hyper)
uuid = { version = "1.0", features = ["v4"] }
sha1 = "0.10"
base64 = "0.21"
async-trait = "0.1"

# Session support (optional) â getrandom for secure session ids
getrandom = { version = "0.3", optional = true }

# JWT auth (optional) â audited impl; pins algorithm, rejects `alg: none`
jsonwebtoken = { version = "9", optional = true }

# API-key auth (optional) — SHA-256 to hash keys (high-entropy secrets, not passwords)
sha2 = { version = "0.10", optional = true }

# Static file serving (optional) — pure-Rust MIME detection
mime_guess = { version = "2", optional = true }

# Response compression (optional) — both pure Rust, no C deps
flate2  = { version = "1", optional = true }
brotli  = { version = "8", optional = true }

# Database support (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"], optional = true }
diesel = { version = "2.3.10", optional = true }  # >=2.3.8: RUSTSEC fix for COPY command injection + unaligned access
r2d2 = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
# For client-gen integration tests: the TS derive expands to `::ts_rs` paths,
# which an integration-test crate can only resolve via a dev-dependency.
ts-rs = { workspace = true }
tracing-subscriber = { workspace = true }
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []

# WebSocket feature (zero additional dependencies)
websocket = []

# Test helpers (for integration tests)
test-helpers = []

# Testing utilities for Ultimo apps (TestClient, assertions, fixtures)
testing = []

# Session management (cookie-based, pluggable store)
session = ["dep:getrandom"]

# CSRF protection (double-submit cookie)
csrf = ["dep:getrandom"]

# JWT authentication middleware (HS256)
jwt = ["dep:jsonwebtoken"]

# API-key authentication middleware (pluggable store, SHA-256 hashed keys)
api-key = ["dep:sha2"]

# Static file serving + SPA fallback
static-files = ["dep:mime_guess"]

# Response compression (gzip + brotli)
compression = ["dep:flate2", "dep:brotli"]

# TypeScript client generation — derive RPC client types from Rust types via ts-rs
client-gen = ["dep:ts-rs"]

# Database features
database = []
sqlx-postgres = ["database", "sqlx", "sqlx/postgres"]
sqlx-mysql = ["database", "sqlx", "sqlx/mysql"]
sqlx-sqlite = ["database", "sqlx", "sqlx/sqlite"]
diesel-postgres = ["database", "diesel", "diesel/postgres", "diesel/r2d2", "r2d2"]
diesel-mysql = ["database", "diesel", "diesel/mysql", "diesel/r2d2", "r2d2"]
diesel-sqlite = ["database", "diesel", "diesel/sqlite", "diesel/r2d2", "r2d2"]

[[bench]]
name = "websocket_bench"
harness = false
required-features = ["websocket", "test-helpers"]

# Framework-overhead benchmarks (routing, dispatch, JSON, middleware). No feature
# gate — runs on default features via in-process `Ultimo::oneshot`.
[[bench]]
name = "http_bench"
harness = false
