[package]
name = "basic-example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ultimo = { path = "../../ultimo" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
