[package]
name = "database-sqlx-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ultimo = { path = "../../ultimo", features = ["sqlx-postgres"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tracing-subscriber = "0.3"
