[package]
name = "jwt-auth-example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ultimo = { path = "../../ultimo", features = ["jwt"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
