[package]
name = "rpc-modes"
version.workspace = true
edition.workspace = true

[dependencies]
ultimo = { path = "../../ultimo", features = ["client-gen"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
# Required for `#[derive(TS)]`: the derive expands to code referencing the
# `ts_rs` crate, so client-gen users add it as a direct dependency.
ts-rs = { workspace = true }
