[package]
name = "session-auth-example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ultimo = { path = "../../ultimo", features = ["session", "csrf"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
