[package]
name = "ultimo-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "ultimo-benchmark"
path = "src/main.rs"

[dependencies]
ultimo = { path = "../../../ultimo" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
